--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,11 +2,15 @@
 version: 2
 
 registries:
-  dockerhub:
+  dockerhub-registry:
     type: docker-registry
     url: registry.hub.docker.com
     username: ${{secrets.DOCKERHUB_USERNAME}}
     password: ${{secrets.DOCKERHUB_PASSWORD}}
+  github-registry:
+    type: docker-registry
+    url: https://ghcr.io
+    token: ${{secrets.GH_TOKEN}}
 
 updates:
   - package-ecosystem: github-actions
@@ -17,6 +21,26 @@ updates:
       prefix: "ci"
       include: "scope"
 
+  - package-ecosystem: devcontainers
+    directory: "/"
+    schedule:
+      interval: weekly
+    commit-message:
+      prefix: "chore"
+      include: "scope"
+    registries:
+      - github-registry
+
+  - package-ecosystem: docker
+    directory: "/.devcontainer"
+    schedule:
+      interval: weekly
+    commit-message:
+      prefix: "chore"
+      include: "scope"
+    registries:
+      - github-registry
+
   - package-ecosystem: docker
     directories: 
       - "/alpine"
@@ -26,7 +50,7 @@ updates:
       prefix: "chore"
       include: "scope"
     registries:
-      - dockerhub
+      - dockerhub-registry
 
   - package-ecosystem: docker
     directories: 
@@ -37,7 +61,7 @@ updates:
       prefix: "chore"
       include: "scope"
     registries:
-      - dockerhub
+      - dockerhub-registry
 
   - package-ecosystem: docker
     directories: 
@@ -48,7 +72,7 @@ updates:
       prefix: "chore"
       include: "scope"
     registries:
-      - dockerhub
+      - dockerhub-registry
 
   - package-ecosystem: docker
     directories: 
@@ -59,4 +83,4 @@ updates:
       prefix: "chore"
       include: "scope"
     registries:
-      - dockerhub
+      - dockerhub-registry
