--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ registries:
     url: registry.hub.docker.com
     username: ${{secrets.DOCKERHUB_USERNAME}}
     password: ${{secrets.DOCKERHUB_PASSWORD}}
+
   github-registry:
     type: docker-registry
     url: https://ghcr.io
@@ -78,6 +79,17 @@ updates:
   - package-ecosystem: docker
     directories: 
       - "/debian"
+    schedule:
+      interval: daily
+    commit-message:
+      prefix: "chore"
+      include: "scope"
+    registries:
+      - dockerhub-registry
+
+  - package-ecosystem: docker
+    directories: 
+      - "/python"
     schedule:
       interval: daily
     commit-message:
