--- a/.github/workflows/build-python-alpine.yml
+++ b/.github/workflows/build-python-alpine.yml
@@ -1,16 +1,16 @@
 ---
-name: 'build alpine'
+name: 'build python-alpine'
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'alpine/**'
+      - 'python/**'
   workflow_dispatch:
 
 env:
-  IMAGE: alpine
+  IMAGE: python
   DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
   DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
 
@@ -42,12 +42,12 @@ jobs:
       - name: 'extract version from dockerfile'
         id: extract_version
         run: |
-          TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.IMAGE}}/Dockerfile)
+          TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.IMAGE}}/Dockerfile.alpine)
           echo "TAG=${TAG#v}" >> $GITHUB_ENV
           echo "TAG=${TAG#v}"
 
       - name: 'push'
         uses: docker/bake-action@v5
         with:
-          targets: push
+          targets: push-alpine
           workdir: ./${{env.IMAGE}}
