--- a/alpine-ci/Dockerfile
+++ b/alpine-ci/Dockerfile
@@ -4,6 +4,7 @@ FROM docker.io/alpine:3.20 AS base
 
 RUN apk add --no-cache \
     tzdata sudo bash git aws-cli curl ca-certificates jq \
+    && rm -rf /var/cache/apk/* \
     && cp /usr/share/zoneinfo/Asia/Singapore /etc/localtime \
     && echo "Asia/Singapore" > /etc/timezone \
     && mkdir -p /var/cache/apk \
