--- a/python/Dockerfile.debian
+++ b/python/Dockerfile.debian
@@ -24,7 +24,10 @@ ENV PATH="$POETRY_HOME/bin:$POETRY_HOME/venv/bin:$PATH"
 
 FROM base AS build
 
-RUN apk add --no-cache curl \
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get install -y --no-install-recommends curl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
     && curl -sSL https://install.python-poetry.org | python3 -
 
 FROM base AS final
