--- a/.github/workflows/pr-build-python-debian.yml
+++ b/.github/workflows/pr-build-python-debian.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'python/**'
+      - 'python/Dockerfile.debian'
     types:
       - opened
       - synchronize
