--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -2,13 +2,8 @@
 
 FROM docker.io/alpine:3.20 AS base
 
-RUN apk add --no-cache tzdata \
-    && rm -rf /var/cache/apk/* \
-    && cp /usr/share/zoneinfo/Asia/Singapore /etc/localtime \
-    && echo "Asia/Singapore" > /etc/timezone
-
-ENV LANG="en_US.UTF-8" \
-    LANGUAGE="en_US:en" \
-    LC_ALL="en_US.UTF-8"
+ENV TZ="Asia/Singapore" \
+    LANG="en_US.UTF-8" \
+    LANGUAGE="en_US:en"
 
 USER root
