--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -2,17 +2,8 @@
 
 FROM docker.io/debian:bullseye AS base
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get install -y --no-install-recommends tzdata locales-all locales \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
-    && ln -fs /usr/share/zoneinfo/Asia/Singapore /etc/localtime \
-    && dpkg-reconfigure --frontend noninteractive tzdata \
-    && locale-gen en_US.UTF-8 \
-    && update-locale
-
-ENV LANG="en_US.UTF-8" \
-    LANGUAGE="en_US:en" \
-    LC_ALL="en_US.UTF-8"
+ENV TZ="Asia/Singapore" \
+    LANG="en_US.UTF-8" \
+    LANGUAGE="en_US:en"
 
 USER root
