--- a/python/Dockerfile.debian
+++ b/python/Dockerfile.debian
@@ -2,22 +2,13 @@
 
 FROM docker.io/python:3.13.0-bullseye AS base
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get install -y --no-install-recommends tzdata locales-all locales \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
-    && ln -fs /usr/share/zoneinfo/Asia/Singapore /etc/localtime \
-    && dpkg-reconfigure --frontend noninteractive tzdata \
-    && locale-gen en_US.UTF-8 \
-    && update-locale
-
-ENV LANG="en_US.UTF-8" \
+ENV TZ="Asia/Singapore" \
+    LANG="en_US.UTF-8" \
     LANGUAGE="en_US:en" \
-    LC_ALL="en_US.UTF-8" \
-    PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
+    POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_IN_PROJECT=1 \
     POETRY_VIRTUALENVS_CREATE=1 \
+    POETRY_CACHE_DIR="/opt/poetry/.cache" \
     POETRY_HOME="/opt/poetry"
 
 ENV PATH="$POETRY_HOME/bin:$POETRY_HOME/venv/bin:$PATH"
