--- a/alpine-ci/Dockerfile
+++ b/alpine-ci/Dockerfile
@@ -3,7 +3,7 @@
 FROM docker.io/alpine:3.20 AS base
 
 RUN apk add --no-cache \
-    tzdata sudo bash git aws-cli curl ca-certificates jq \
+    bash git aws-cli curl ca-certificates jq \
     && rm -rf /var/cache/apk/* \
     && mkdir -p /var/cache/apk \
     && ln -s /var/cache/apk /etc/apk/cache
