--- a/alpine-ci/Dockerfile
+++ b/alpine-ci/Dockerfile
@@ -3,13 +3,14 @@
 FROM docker.io/alpine:3.20 AS base
 
 RUN apk add --no-cache \
-    bash git aws-cli curl ca-certificates jq \
+    sudo bash git aws-cli curl ca-certificates jq \
     && rm -rf /var/cache/apk/* \
     && mkdir -p /var/cache/apk \
     && ln -s /var/cache/apk /etc/apk/cache
 
 ENV TZ="Asia/Singapore" \
     LANG="en_US.UTF-8" \
-    LANGUAGE="en_US:en"
+    LANGUAGE="en_US:en" \
+    LC_ALL="en_US.UTF-8"
 
 USER root
