--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -4,6 +4,7 @@ FROM docker.io/alpine:3.20 AS base
 
 ENV TZ="Asia/Singapore" \
     LANG="en_US.UTF-8" \
-    LANGUAGE="en_US:en"
+    LANGUAGE="en_US:en" \
+    LC_ALL="en_US.UTF-8"
 
 USER root
