--- a/python/Dockerfile.alpine
+++ b/python/Dockerfile.alpine
@@ -5,6 +5,7 @@ FROM docker.io/python:3.13.0-alpine AS base
 ENV TZ="Asia/Singapore" \
     LANG="en_US.UTF-8" \
     LANGUAGE="en_US:en" \
+    LC_ALL="en_US.UTF-8" \
     POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_IN_PROJECT=1 \
     POETRY_VIRTUALENVS_CREATE=1 \
