--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -2,8 +2,14 @@
 
 FROM docker.io/ubuntu:jammy AS base
 
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get install -y --no-install-recommends locales-all \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 ENV TZ="Asia/Singapore" \
     LANG="en_US.UTF-8" \
-    LANGUAGE="en_US:en"
+    LANGUAGE="en_US:en" \
+    LC_ALL="en_US.UTF-8"
 
 USER root
