--- a/python/Dockerfile.debian
+++ b/python/Dockerfile.debian
@@ -2,9 +2,15 @@
 
 FROM docker.io/python:3.13.0-bullseye AS base
 
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get install -y --no-install-recommends locales-all \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 ENV TZ="Asia/Singapore" \
     LANG="en_US.UTF-8" \
     LANGUAGE="en_US:en" \
+    LC_ALL="en_US.UTF-8" \
     POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_IN_PROJECT=1 \
     POETRY_VIRTUALENVS_CREATE=1 \
