--- a/python/Dockerfile.alpine
+++ b/python/Dockerfile.alpine
@@ -12,7 +12,7 @@ ENV TZ="Asia/Singapore" \
     POETRY_CACHE_DIR="/opt/poetry/.cache" \
     POETRY_HOME="/opt/poetry"
 
-ENV PATH="$POETRY_HOME/bin:$POETRY_HOME/venv/bin:$PATH"
+ENV PATH="${POETRY_HOME}/bin:${POETRY_HOME}/venv/bin:${PATH}"
 
 FROM base AS build
 
