--- a/.github/workflows/build-python-alpine.yml
+++ b/.github/workflows/build-python-alpine.yml
@@ -13,6 +13,8 @@ env:
   IMAGE: python
   DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
   DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
+  AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
+  AWS_ROLE_ARN: ${{secrets.AWS_ROLE_ARN}}
 
 permissions:
   contents: read
@@ -31,6 +33,19 @@ jobs:
 
       - name: 'setup docker buildx'
         uses: docker/setup-buildx-action@v3
+
+      - name: 'configure aws credentials'
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{env.AWS_ROLE_ARN}}
+          role-session-name: aws-oidc-${{github.repository.name}}-${{github.run_id}}
+          aws-region: ${{env.AWS_DEFAULT_REGION}}
+
+      - name: 'login to amazon ecr public'
+        id: login-ecr-public
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          registry-type: public
 
       - name: 'login to dockerhub'
         uses: docker/login-action@v3
