--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,17 +2,17 @@
 version: 2
 
 registries:
-  dockerhub-registry:
-    type: docker-registry
-    url: registry.hub.docker.com
-    username: ${{secrets.DOCKERHUB_USERNAME}}
-    password: ${{secrets.DOCKERHUB_PASSWORD}}
-
   github-registry:
     type: docker-registry
     url: https://ghcr.io
     username: ${{github.actor}}
     password: ${{secrets.GH_TOKEN}}
+
+  aws-ecr-public-registry:
+    type: docker-registry
+    url: https://public.ecr.aws
+    username: ${{secrets.AWS_ACCESS_KEY_ID}}
+    password: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 
 updates:
   - package-ecosystem: github-actions
@@ -30,8 +30,7 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    registries:
-      - github-registry
+    registries: ["github-registry","aws-ecr-public-registry"]
 
   - package-ecosystem: docker
     directory: "/.devcontainer"
@@ -51,8 +50,7 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    registries:
-      - dockerhub-registry
+    registries: ["aws-ecr-public-registry"]
 
   - package-ecosystem: docker
     directories:
@@ -62,8 +60,7 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    registries:
-      - dockerhub-registry
+    registries: ["aws-ecr-public-registry"]
 
   - package-ecosystem: docker
     directories:
@@ -73,8 +70,7 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    registries:
-      - dockerhub-registry
+    registries: ["aws-ecr-public-registry"]
 
   - package-ecosystem: docker
     directories:
@@ -84,8 +80,7 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    registries:
-      - dockerhub-registry
+    registries: ["aws-ecr-public-registry"]
 
   - package-ecosystem: docker
     directories:
@@ -95,8 +90,7 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    registries:
-      - dockerhub-registry
+    registries: ["aws-ecr-public-registry"]
 
   - package-ecosystem: docker
     directories:
@@ -106,5 +100,4 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    registries:
-      - dockerhub-registry
+    registries: ["aws-ecr-public-registry"]
