--- a/.github/workflows/build-node-debian.yml
+++ b/.github/workflows/build-node-debian.yml
@@ -11,8 +11,6 @@ on:
 
 env:
   IMAGE: node
-  DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
-  DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
   AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
   AWS_ROLE_ARN: ${{secrets.AWS_ROLE_ARN}}
 
@@ -48,21 +46,15 @@ jobs:
         with:
           registry-type: public
 
-      - name: 'login to dockerhub'
-        uses: docker/login-action@v3
-        with:
-          username: ${{env.DOCKERHUB_USERNAME}}
-          password: ${{env.DOCKERHUB_PASSWORD}}
-
       - name: 'extract version from dockerfile'
         id: extract_version
         run: |
           TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.IMAGE}}/Dockerfile.debian)
           echo "TAG=${TAG#v}" >> $GITHUB_ENV
           echo "TAG=${TAG#v}"
-          BASE=$(sed -n 's/^FROM .*:\([^ -]*\)-\([^ -]*\).*/\2/p' ./${{env.IMAGE}}/Dockerfile.debian)
-          echo "BASE=${BASE}" >> $GITHUB_ENV
-          echo "BASE=${BASE}"
+          IMAGE_BASE=$(sed -n 's/^FROM .*:\([^ -]*\)-\([^ -]*\).*/\2/p' ./${{env.IMAGE}}/Dockerfile.debian)
+          echo "IMAGE_BASE=${IMAGE_BASE}" >> $GITHUB_ENV
+          echo "IMAGE_BASE=${IMAGE_BASE}"
 
       - name: 'push'
         uses: docker/bake-action@v5
