--- a/python/Dockerfile.alpine
+++ b/python/Dockerfile.alpine
@@ -5,22 +5,6 @@ FROM docker.io/python:3.13.1-alpine AS base
 ENV TZ="Asia/Singapore" \
     LANG="en_US.UTF-8" \
     LANGUAGE="en_US:en" \
-    LC_ALL="en_US.UTF-8" \
-    POETRY_NO_INTERACTION=1 \
-    POETRY_VIRTUALENVS_IN_PROJECT=1 \
-    POETRY_VIRTUALENVS_CREATE=1 \
-    POETRY_CACHE_DIR="/opt/poetry/.cache" \
-    POETRY_HOME="/opt/poetry"
-
-ENV PATH="${POETRY_HOME}/bin:${POETRY_HOME}/venv/bin:${PATH}"
-
-FROM base AS build
-
-RUN apk add --no-cache curl \
-    && curl -fsSL https://install.python-poetry.org | python3 -
-
-FROM base AS final
-
-COPY --from=build "${POETRY_HOME}" "${POETRY_HOME}"
+    LC_ALL="en_US.UTF-8"
 
 USER root
