--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,9 +11,7 @@
   },
   "customizations": {
     "vscode": {
-      "settings": {
-        "terminal.integrated.defaultProfile.linux": "zsh"
-      },
+      "settings": {"terminal.integrated.defaultProfile.linux": "zsh"},
     "extensions": []
     }
   }
