--- a/node/Dockerfile.debian
+++ b/node/Dockerfile.debian
@@ -15,7 +15,6 @@ ENV TZ="Asia/Singapore" \
 
 ENV PATH="${PNPM_HOME}:${PATH}"
 
-RUN corepack enable \
-    && corepack prepare pnpm@latest --activate
+RUN npm install -g pnpm typescript
 
 USER root
