--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,17 @@
 {
-  "name": "base-images",
-  "dockerComposeFile": ["./compose.yml"],
-  "service": "devcontainer-base-images",
-  "remoteUser": "vscode",
-  "shutdownAction": "stopCompose",
-  "workspaceFolder": "/home/vscode/base-images",
+  "image": "ghcr.io/antyung/devcontainers/ubuntu:jammy",
+  "name": "docker-base-images",
   "features": {
       "ghcr.io/antyung/devcontainers/common-utils:1": {},
       "ghcr.io/antyung/devcontainers/docker-in-docker:1": {}
   },
   "customizations": {
     "vscode": {
-      "settings": {"terminal.integrated.defaultProfile.linux": "zsh"},
+      "settings": { "terminal.integrated.defaultProfile.linux": "zsh" },
     "extensions": []
     }
-  }
+  },
+  "containerUser": "vscode",
+  "workspaceMount": "source=${localWorkspaceFolder}/,target=/home/vscode/docker-base-images,type=bind,consistency=cached", "workspaceFolder": "/home/vscode",
+  "postCreateCommand": "sudo chown -R vscode:vscode /home/vscode/docker-base-images"
 }
