--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,12 +8,6 @@ registries:
     username: ${{secrets.DOCKERHUB_USERNAME}}
     password: ${{secrets.DOCKERHUB_PASSWORD}}
 
-  github-registry:
-    type: docker-registry
-    url: https://ghcr.io
-    username: ${{github.actor}}
-    password: ${{secrets.GH_TOKEN}}
-
 updates:
   - package-ecosystem: github-actions
     directory: "/"
@@ -30,26 +24,16 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-    registries: ["github-registry"]
-
-  - package-ecosystem: docker
-    directory: "/.devcontainer"
-    schedule:
-      interval: weekly
-    commit-message:
-      prefix: "chore"
-      include: "scope"
-    registries: ["github-registry"]
 
   - package-ecosystem: docker
     directories:
-      - "/alpine"
-      - "/alpine-ci"
-      - "/debian"
+      - "/alpine/**"
+      - "/alpine-ci/**"
+      - "/debian/**"
       - "/golang/**"
       - "/node/**"
       - "/python/**"
-      - "/ubuntu"
+      - "/ubuntu/**"
     schedule:
       interval: daily
     commit-message:
