--- a/.github/workflows/pr-build-ubuntu.yml
+++ b/.github/workflows/pr-build-ubuntu.yml
@@ -13,7 +13,7 @@ on:
       - reopened
 
 env:
-  IMAGE: ubuntu
+  DOCKER_IMAGE: ubuntu
   GH_TOKEN: ${{secrets.GH_TOKEN}}
 
 permissions:
@@ -40,7 +40,7 @@ jobs:
         uses: docker/bake-action@v5
         with:
           targets: test
-          workdir: ./${{env.IMAGE}}
+          workdir: ./${{env.DOCKER_IMAGE}}
 
       - name: 'dependabot metadata'
         id: metadata
