--- a/.github/workflows/build-golang-alpine.yml
+++ b/.github/workflows/build-golang-alpine.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   DOCKER_IMAGE: golang
-  DOCKER_GROUP: base
+  DOCKER_IMAGE_GROUP: base
   AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
   AWS_OIDC_ROLE_ARN: ${{secrets.AWS_OIDC_ROLE_ARN}}
 
@@ -57,7 +57,7 @@ jobs:
 
       - name: 'create ecr-public repository'
         run: |
-          aws ecr-public create-repository --repository-name ${{env.DOCKER_GROUP}}/${{env.DOCKER_IMAGE}} --region us-east-1 || true
+          aws ecr-public create-repository --repository-name ${{env.DOCKER_IMAGE_GROUP}}/${{env.DOCKER_IMAGE}} --region us-east-1 || true
 
       - name: 'push'
         uses: docker/bake-action@v5
