--- a/.github/workflows/build-golang-debian.yml
+++ b/.github/workflows/build-golang-debian.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   DOCKER_IMAGE: golang
-  DOCKER_GROUP: base
+  DOCKER_IMAGE_GROUP: base
   AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
   AWS_OIDC_ROLE_ARN: ${{secrets.AWS_OIDC_ROLE_ARN}}
 
@@ -54,13 +54,13 @@ jobs:
           DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.debian)
           echo "DOCKER_TAG=${DOCKER_TAG#v}" >> $GITHUB_ENV
           echo "DOCKER_TAG=${DOCKER_TAG#v}"
-          IMAGE_BASE=$(sed -n 's/^FROM .*:\([^ -]*\)-\([^ -]*\).*/\2/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.debian)
-          echo "IMAGE_BASE=${IMAGE_BASE}" >> $GITHUB_ENV
-          echo "IMAGE_BASE=${IMAGE_BASE}"
+          DOCKER_IMAGE_OS=$(sed -n 's/^FROM .*:\([^ -]*\)-\([^ -]*\).*/\2/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.debian)
+          echo "DOCKER_IMAGE_OS=${DOCKER_IMAGE_OS}" >> $GITHUB_ENV
+          echo "DOCKER_IMAGE_OS=${DOCKER_IMAGE_OS}"
 
       - name: 'create ecr-public repository'
         run: |
-          aws ecr-public create-repository --repository-name ${{env.DOCKER_GROUP}}/${{env.DOCKER_IMAGE}} --region us-east-1 || true
+          aws ecr-public create-repository --repository-name ${{env.DOCKER_IMAGE_GROUP}}/${{env.DOCKER_IMAGE}} --region us-east-1 || true
 
       - name: 'push'
         uses: docker/bake-action@v5
