--- a/.github/workflows/pr-build-alpine-ci.yml
+++ b/.github/workflows/pr-build-alpine-ci.yml
@@ -6,7 +6,8 @@ on:
     branches:
       - main
     paths:
-      - 'alpine-ci/**'
+      - 'alpine-ci/Dockerfile.alpine'
+      - 'alpine-ci/docker-bake.hcl'
     types:
       - opened
       - synchronize
