--- a/.github/workflows/pr-build-alpine.yml
+++ b/.github/workflows/pr-build-alpine.yml
@@ -6,7 +6,8 @@ on:
     branches:
       - main
     paths:
-      - 'alpine/**'
+      - 'alpine/Dockerfile.alpine'
+      - 'alpine/docker-bake.hcl'
     types:
       - opened
       - synchronize
