--- a/.github/workflows/pr-build-ubuntu.yml
+++ b/.github/workflows/pr-build-ubuntu.yml
@@ -6,7 +6,8 @@ on:
     branches:
       - main
     paths:
-      - 'ubuntu/**'
+      - 'ubuntu/Dockerfile.ubuntu'
+      - 'ubuntu/docker-bake.hcl'
     types:
       - opened
       - synchronize
