--- a/.github/workflows/build-alpine-ci.yml
+++ b/.github/workflows/build-alpine-ci.yml
@@ -6,7 +6,8 @@ on:
     branches:
       - main
     paths:
-      - 'alpine-ci/**'
+      - 'alpine-ci/Dockerfile.alpine'
+      - 'alpine-ci/docker-bake.hcl'
   workflow_dispatch:
 
 env:
@@ -49,7 +50,7 @@ jobs:
       - name: 'extract version from dockerfile'
         id: extract_version
         run: |
-          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile)
+          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.alpine)
           echo "DOCKER_TAG=${DOCKER_TAG#v}" >> $GITHUB_ENV
           echo "DOCKER_TAG=${DOCKER_TAG#v}"
 
