--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -6,7 +6,8 @@ on:
     branches:
       - main
     paths:
-      - 'debian/**'
+      - 'debian/Dockerfile.debian'
+      - 'debian/docker-bake.hcl'
   workflow_dispatch:
 
 env:
@@ -50,7 +51,7 @@ jobs:
       - name: 'extract version from dockerfile'
         id: extract_version
         run: |
-          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile)
+          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.debian)
           echo "DOCKER_TAG=${DOCKER_TAG#v}" >> $GITHUB_ENV
           echo "DOCKER_TAG=${DOCKER_TAG#v}"
 
