--- a/.github/workflows/pr-build-golang-debian.yml
+++ b/.github/workflows/pr-build-golang-debian.yml
@@ -7,6 +7,7 @@ on:
       - main
     paths:
       - 'golang/Dockerfile.debian'
+      - 'golang/docker-bake.hcl'
     types:
       - opened
       - synchronize
