--- a/.github/workflows/pr-build-node-alpine.yml
+++ b/.github/workflows/pr-build-node-alpine.yml
@@ -7,6 +7,7 @@ on:
       - main
     paths:
       - 'node/Dockerfile.alpine'
+      - 'node/docker-bake.hcl'
     types:
       - opened
       - synchronize
