--- a/.github/workflows/pr-build-python-alpine.yml
+++ b/.github/workflows/pr-build-python-alpine.yml
@@ -7,6 +7,7 @@ on:
       - main
     paths:
       - 'python/Dockerfile.alpine'
+      - 'python/docker-bake.hcl'
     types:
       - opened
       - synchronize
