--- a/alpine-ci/Dockerfile.alpine
+++ b/alpine-ci/Dockerfile.alpine
@@ -4,11 +4,11 @@ FROM docker.io/alpine:3.21 AS base
 
 USER root
 
-RUN apk add --no-cache \
-    sudo bash bash-completion git aws-cli curl ca-certificates jq \
+RUN apk add --no-cache sudo bash bash-completion git aws-cli curl ca-certificates jq \
     && rm -rf /var/cache/apk/* \
-    && ln -s /var/cache/apk /etc/apk/cache \
-    && sed -i 's#/bin/sh#/bin/bash#' /etc/passwd \
+    && ln -s /var/cache/apk /etc/apk/cache
+
+RUN sed -i 's#/bin/sh#/bin/bash#' /etc/passwd \
     && echo "complete -C $(which aws_completer) aws" > /etc/bash_completion.d/aws_completer.bash
 
 ENV TZ="Asia/Singapore" \
