--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,15 +15,6 @@ updates:
       interval: weekly
     commit-message:
       prefix: "ci"
-      include: "scope"
-
-  - package-ecosystem: devcontainers
-    directory: "/"
-    schedule:
-      interval: weekly
-    commit-message:
-      prefix: "build"
-      include: "scope"
 
   - package-ecosystem: gomod
     directory: "/"
@@ -31,7 +22,13 @@ updates:
       interval: weekly
     commit-message:
       prefix: "test"
-      include: "scope"
+
+  - package-ecosystem: devcontainers
+    directory: "/"
+    schedule:
+      interval: weekly
+    commit-message:
+      prefix: "dev"
 
   - package-ecosystem: docker
     directories:
@@ -46,5 +43,4 @@ updates:
       interval: daily
     commit-message:
       prefix: "build"
-      include: "scope"
     registries: ["dockerhub-registry"]
