--- a/.github/workflows/build-push-debian.yml
+++ b/.github/workflows/build-push-debian.yml
@@ -1,19 +1,19 @@
 ---
-name: 'build golang-alpine'
+name: 'Build Push debian'
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'golang/Dockerfile.alpine'
-      - 'golang/docker-bake.hcl'
+      - 'debian/Dockerfile.debian'
+      - 'debian/docker-bake.hcl'
   workflow_dispatch:
 
 env:
-  DOCKER_IMAGE: golang
+  DOCKER_IMAGE: debian
   DOCKER_IMAGE_GROUP: base
-  AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
+  AWS_DEFAULT_REGION: us-east-1
   AWS_OIDC_ROLE_ARN: ${{secrets.AWS_OIDC_ROLE_ARN}}
 
 permissions:
@@ -51,16 +51,16 @@ jobs:
       - name: 'extract version from dockerfile'
         id: extract_version
         run: |
-          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.alpine)
+          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.debian)
           echo "DOCKER_TAG=${DOCKER_TAG#v}" >> $GITHUB_ENV
           echo "DOCKER_TAG=${DOCKER_TAG#v}"
 
       - name: 'create ecr-public repository'
         run: |
-          aws ecr-public create-repository --repository-name ${{env.DOCKER_IMAGE_GROUP}}/${{env.DOCKER_IMAGE}} --region us-east-1 || true
+          aws ecr-public create-repository --repository-name ${{env.DOCKER_IMAGE_GROUP}}/${{env.DOCKER_IMAGE}} --region ${{env.AWS_DEFAULT_REGION}} || true
 
-      - name: 'push'
+      - name: 'build-push'
         uses: docker/bake-action@v5
         with:
-          targets: push-alpine
+          targets: push
           workdir: ./${{env.DOCKER_IMAGE}}
