--- a/.github/workflows/build-push-ubuntu.yml
+++ b/.github/workflows/build-push-ubuntu.yml
@@ -1,19 +1,19 @@
 ---
-name: 'build node-debian'
+name: 'Build Push ubuntu'
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'node/Dockerfile.debian'
-      - 'node/docker-bake.hcl'
+      - 'ubuntu/Dockerfile.ubuntu'
+      - 'ubuntu/docker-bake.hcl'
   workflow_dispatch:
 
 env:
-  DOCKER_IMAGE: node
+  DOCKER_IMAGE: ubuntu
   DOCKER_IMAGE_GROUP: base
-  AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
+  AWS_DEFAULT_REGION: us-east-1
   AWS_OIDC_ROLE_ARN: ${{secrets.AWS_OIDC_ROLE_ARN}}
 
 permissions:
@@ -51,19 +51,16 @@ jobs:
       - name: 'extract version from dockerfile'
         id: extract_version
         run: |
-          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.debian)
+          DOCKER_TAG=$(sed -n 's/^FROM .*:\([^ -]*\).*/\1/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.ubuntu)
           echo "DOCKER_TAG=${DOCKER_TAG#v}" >> $GITHUB_ENV
           echo "DOCKER_TAG=${DOCKER_TAG#v}"
-          DOCKER_IMAGE_OS=$(sed -n 's/^FROM .*:\([^ -]*\)-\([^ -]*\).*/\2/p' ./${{env.DOCKER_IMAGE}}/Dockerfile.debian)
-          echo "DOCKER_IMAGE_OS=${DOCKER_IMAGE_OS}" >> $GITHUB_ENV
-          echo "DOCKER_IMAGE_OS=${DOCKER_IMAGE_OS}"
 
       - name: 'create ecr-public repository'
         run: |
-          aws ecr-public create-repository --repository-name ${{env.DOCKER_IMAGE_GROUP}}/${{env.DOCKER_IMAGE}} --region us-east-1 || true
+          aws ecr-public create-repository --repository-name ${{env.DOCKER_IMAGE_GROUP}}/${{env.DOCKER_IMAGE}} --region ${{env.AWS_DEFAULT_REGION}} || true
 
-      - name: 'push'
+      - name: 'build-push'
         uses: docker/bake-action@v5
         with:
-          targets: push-debian
+          targets: push
           workdir: ./${{env.DOCKER_IMAGE}}
