--- a/.github/workflows/pr-test-build-alpine.yml
+++ b/.github/workflows/pr-test-build-alpine.yml
@@ -1,20 +1,20 @@
 ---
-name: 'pr-build debian'
+name: 'PR Test Build alpine'
 
 on:
   pull_request:
     branches:
       - main
     paths:
-      - 'debian/Dockerfile.debian'
-      - 'debian/docker-bake.hcl'
+      - 'alpine/Dockerfile.alpine'
+      - 'alpine/docker-bake.hcl'
     types:
       - opened
       - synchronize
       - reopened
 
 env:
-  DOCKER_IMAGE: debian
+  DOCKER_IMAGE: alpine
   GH_TOKEN: ${{secrets.GH_TOKEN}}
 
 permissions:
@@ -22,7 +22,7 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  test-build:
     runs-on: ubuntu-latest
     if: ${{github.actor == 'dependabot[bot]'}}
     steps:
@@ -37,7 +37,7 @@ jobs:
       - name: 'set up docker buildx'
         uses: docker/setup-buildx-action@v3
 
-      - name: 'test'
+      - name: 'test-build'
         uses: docker/bake-action@v5
         with:
           targets: test
