--- a/.github/workflows/pr-test-build-golang-alpine.yml
+++ b/.github/workflows/pr-test-build-golang-alpine.yml
@@ -1,5 +1,5 @@
 ---
-name: 'pr-build golang-alpine'
+name: 'PR Test Build golang-alpine'
 
 on:
   pull_request:
@@ -22,7 +22,7 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  test-build:
     runs-on: ubuntu-latest
     if: ${{github.actor == 'dependabot[bot]'}}
     steps:
@@ -37,7 +37,7 @@ jobs:
       - name: 'set up docker buildx'
         uses: docker/setup-buildx-action@v3
 
-      - name: 'test'
+      - name: 'test-build'
         uses: docker/bake-action@v5
         with:
           targets: test-alpine
