--- a/.github/workflows/pr-test-build-golang-debian.yml
+++ b/.github/workflows/pr-test-build-golang-debian.yml
@@ -1,20 +1,20 @@
 ---
-name: 'pr-build alpine'
+name: 'PR Test Build golang-debian'
 
 on:
   pull_request:
     branches:
       - main
     paths:
-      - 'alpine/Dockerfile.alpine'
-      - 'alpine/docker-bake.hcl'
+      - 'golang/Dockerfile.debian'
+      - 'golang/docker-bake.hcl'
     types:
       - opened
       - synchronize
       - reopened
 
 env:
-  DOCKER_IMAGE: alpine
+  DOCKER_IMAGE: golang
   GH_TOKEN: ${{secrets.GH_TOKEN}}
 
 permissions:
@@ -22,7 +22,7 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  test-build:
     runs-on: ubuntu-latest
     if: ${{github.actor == 'dependabot[bot]'}}
     steps:
@@ -37,10 +37,10 @@ jobs:
       - name: 'set up docker buildx'
         uses: docker/setup-buildx-action@v3
 
-      - name: 'test'
+      - name: 'test-build'
         uses: docker/bake-action@v5
         with:
-          targets: test
+          targets: test-debian
           workdir: ./${{env.DOCKER_IMAGE}}
 
       - name: 'dependabot metadata'
