--- a/.github/workflows/pr-test-build-python-alpine.yml
+++ b/.github/workflows/pr-test-build-python-alpine.yml
@@ -1,20 +1,20 @@
 ---
-name: 'pr-build node-alpine'
+name: 'PR Test Build python-alpine'
 
 on:
   pull_request:
     branches:
       - main
     paths:
-      - 'node/Dockerfile.alpine'
-      - 'node/docker-bake.hcl'
+      - 'python/Dockerfile.alpine'
+      - 'python/docker-bake.hcl'
     types:
       - opened
       - synchronize
       - reopened
 
 env:
-  DOCKER_IMAGE: node
+  DOCKER_IMAGE: python
   GH_TOKEN: ${{secrets.GH_TOKEN}}
 
 permissions:
@@ -22,7 +22,7 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  test-build:
     runs-on: ubuntu-latest
     if: ${{github.actor == 'dependabot[bot]'}}
     steps:
@@ -37,7 +37,7 @@ jobs:
       - name: 'set up docker buildx'
         uses: docker/setup-buildx-action@v3
 
-      - name: 'test'
+      - name: 'test-build'
         uses: docker/bake-action@v5
         with:
           targets: test-alpine
