--- a/golang/Dockerfile.alpine
+++ b/golang/Dockerfile.alpine
@@ -1,10 +1,10 @@
-# syntax=docker/dockerfile:1
+# syntax=docker.io/docker/dockerfile:1
 
 FROM docker.io/golang:1.23.5-alpine AS base
 
 USER root
 
-ENV TZ="Asia/Singapore" \
-    LANG="en_US.UTF-8" \
-    LANGUAGE="en_US:en" \
-    LC_ALL="en_US.UTF-8"
+ENV TZ=Asia/Singapore \
+    LANG=en_US.UTF-8 \
+    LANGUAGE=en_US:en \
+    LC_ALL=en_US.UTF-8
