--- a/node/Dockerfile.alpine
+++ b/node/Dockerfile.alpine
@@ -1,14 +1,14 @@
-# syntax=docker/dockerfile:1
+# syntax=docker.io/docker/dockerfile:1
 
 FROM docker.io/node:23.6.1-alpine AS base
 
 USER root
 
-ENV TZ="Asia/Singapore" \
-    LANG="en_US.UTF-8" \
-    LANGUAGE="en_US:en" \
-    LC_ALL="en_US.UTF-8" \
-    PNPM_HOME="/opt/pnpm"
+ENV TZ=Asia/Singapore \
+    LANG=en_US.UTF-8 \
+    LANGUAGE=en_US:en \
+    LC_ALL=en_US.UTF-8 \
+    PNPM_HOME=/opt/pnpm
 
 ENV PATH="${PNPM_HOME}:${PATH}"
 
