--- a/node/Dockerfile.debian
+++ b/node/Dockerfile.debian
@@ -1,4 +1,4 @@
-# syntax=docker/dockerfile:1
+# syntax=docker.io/docker/dockerfile:1
 
 FROM docker.io/node:23.6.1-bookworm AS base
 
@@ -9,11 +9,11 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-ENV TZ="Asia/Singapore" \
-    LANG="en_US.UTF-8" \
-    LANGUAGE="en_US:en" \
-    LC_ALL="en_US.UTF-8" \
-    PNPM_HOME="/opt/pnpm"
+ENV TZ=Asia/Singapore \
+    LANG=en_US.UTF-8 \
+    LANGUAGE=en_US:en \
+    LC_ALL=en_US.UTF-8 \
+    PNPM_HOME=/opt/pnpm
 
 ENV PATH="${PNPM_HOME}:${PATH}"
 
