--- a/node/Dockerfile.debian
+++ b/node/Dockerfile.debian
@@ -11,9 +11,4 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
 ENV TZ=Asia/Singapore \
     LANG=en_US.UTF-8 \
     LANGUAGE=en_US:en \
-    LC_ALL=en_US.UTF-8 \
-    PNPM_HOME=/opt/pnpm
-
-ENV PATH="${PNPM_HOME}:${PATH}"
-
-RUN npm install -g pnpm
+    LC_ALL=en_US.UTF-8
