--- a/debian/Dockerfile.debian-slim
+++ b/debian/Dockerfile.debian-slim
@@ -4,7 +4,7 @@ FROM docker.io/debian:bullseye-slim AS base
 
 USER root
 
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends locales-all \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ca-certificates locales-all \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
