--- a/python/Dockerfile.debian
+++ b/python/Dockerfile.debian
@@ -4,7 +4,7 @@ FROM docker.io/python:3.13.1-bullseye AS base
 
 USER root
 
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends locales-all \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ca-certificates locales-all \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
